--- a/CodePipeline/pipeline.yaml
+++ b/CodePipeline/pipeline.yaml
@@ -3,14 +3,14 @@ Description: >
   CloudFormation SageMaker pipeline.
 Parameters:
   Email:
-    Description: The email address where CodePipeline sends pipeline notifications
+    Description: The email address where Code ipeline sends pipeline notifications
     Type: String
   GitHubToken:
     NoEcho: true
     Description: Secret. It might look something like 9b189a1654643522561f7b3ebd44a1531a4287af OAuthToken with access to Repo. Go to https://github.com/settings/tokens
     Type: String
   GitHubUser:
-    Default: stelligent
+    Default: russellms
     Description: GitHub UserName
     Type: String
   Repo:
@@ -104,7 +104,7 @@ Resources:
                 - echo "Installing wget and boto3"
                 - pip3 install wget
                 - pip3 install boto3
-		- printenv
+                - printenv
             build:
               commands:
                 - echo "Running training.py"
@@ -201,7 +201,7 @@ Resources:
                 OAuthToken: !Ref 'GitHubToken'
               OutputArtifacts:
                 - Name: src
-              RunOrder: '1'
+              RunOrder: 1
         - Name: Build_and_Train
           Actions:
             - Name: cfn-nag
@@ -214,7 +214,7 @@ Resources:
                 ProjectName: !Ref 'CFNNagProject'
               InputArtifacts:
                 - Name: src
-              RunOrder: '1'
+              RunOrder: 1
             - Name: ModelTraining
               ActionTypeId:
                 Category: Build
@@ -227,7 +227,7 @@ Resources:
                 - Name: src
               OutputArtifacts:
                 - Name: bld
-              RunOrder: '2'
+              RunOrder: 2
         - Name: QA
           Actions:
             - Name: LaunchEndpoint
@@ -244,7 +244,7 @@ Resources:
                 StackName: !Sub qa-${AWS::StackName}
                 TemplatePath: !Sub "bld::CloudFormation/sagemaker.yaml"
                 TemplateConfiguration: "bld::CloudFormation/configuration_qa.json"
-              RunOrder: '1'
+              RunOrder: 1
             - Name: TestEndpoint
               ActionTypeId:
                 Category: Test
@@ -255,7 +255,7 @@ Resources:
                 ProjectName: !Ref 'TestEndpointProjectQA'
               InputArtifacts:
                 - Name: bld
-              RunOrder: '2'
+              RunOrder: 2
         - Name: Production
           Actions:
             - Name: ApprovalGate
@@ -267,7 +267,7 @@ Resources:
               Configuration:
                 NotificationArn: !Ref CodePipelineSNSTopic
                 CustomData: !Sub 'Do you want to push your changes to production?'
-              RunOrder: '1'
+              RunOrder: 1
             - Name: LaunchEndpoint
               ActionTypeId:
                 Category: Deploy
@@ -282,7 +282,7 @@ Resources:
                 StackName: !Sub prod-${AWS::StackName}
                 TemplatePath: !Sub "bld::CloudFormation/sagemaker.yaml"
                 TemplateConfiguration: "bld::CloudFormation/configuration_prod.json"
-              RunOrder: '2'
+              RunOrder: 2
             - Name: TestEndpoint
               ActionTypeId:
                 Category: Test
@@ -293,7 +293,7 @@ Resources:
                 ProjectName: !Ref 'TestEndpointProjectProd'
               InputArtifacts:
                 - Name: bld
-              RunOrder: '3'
+              RunOrder: 3
 
   CFNRole:
     Type: AWS::IAM::Role
